Changelog
=========

4.0 - Unreleased
----------------

- Removed a five:implements statement, as the ZPublisher.HTTPRequest is always
  an IBrowserRequest in Zope 2.12.
  [hannosch]

- This version depends on Zope 2.12+.
  [hannosch]

- Package metadata cleanup.
  [hannosch]

- Declare package and test dependencies.
  [hannosch]

3.0.3 - 2007-11-24
------------------

- Use binascii.b2a_base64 instead of base64.encodestring; the former doesn't
  inject newlines every 76 characters, which makes it easier to strip just the
  last one (slightly faster). This fixes tickets #7323 and #7325.
  [mj]

3.0.2 - 2007-11-06
------------------

- Fixed encoding format for the cookie value. The former format imposed a
  serious security risk. The full security issue is tracked at:
  http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2007-5741. This also fixes
  http://dev.plone.org/plone/ticket/6943.
  [hannosch, witsch, mj]

3.0.1 - 2007-10-07
------------------

- Added the IAttributeAnnotatable interface assignment for the request to this
  package as well as the inclusion of the zope.annotation, as we rely on it.
  [hannosch]

3.0 - 2007-08-09
----------------

- No changes.
  [hannosch]

3.0rc1 - 2007-07-10
-------------------

- Removed useless setup.cfg.
  [hannosch]

3.0b2 - 2007-03-23
------------------

- Fixed duplicate message bug. Showing identical messages to the end user more
  than once, doesn't make any sense. This closes
  http://dev.plone.org/plone/ticket/6109.
  [hannosch]

- Added 's support for statusmessages without a redirect. This uses annotations
  on the request instead of direct values, so we avoid the possibility of
  sneaking those in via query strings.
  [tomster, hannosch]

3.0b1 - 2007-03-05
------------------

- Converted to a package in the Products namespace.
  [hannosch]

- Added explicit translation of statusmessages before storing them in the
  cookie. This makes sure we have a reasonable context to base the
  translation on.
  [hannosch]
