@@ -36,32 +36,32 @@ def test_directives():
 
     The dummy request we have is a bit limited, so we need a simple method
     to fake a real request/response for the cookie handling. Basically it
-    puts all entries from RESPONSE.cookies into REQUEST.cookies but shifts
+    puts all entries from response.cookies into REQUEST.cookies but shifts
     the real values into the right place as browsers would do it.
       
       >>> def fakePublish(request):
-      ...     cookies = request.RESPONSE.cookies.copy()
+      ...     cookies = request.response.cookies.copy()
       ...     new_cookies = {}
       ...     for key in cookies.keys():
       ...         new_cookies[key] = cookies[key]['value']
       ...     request.cookies = new_cookies
-      ...     request.RESPONSE.cookies = {}
+      ...     request.response.cookies = {}
 
       >>> request = self.app.REQUEST
       >>> status = IStatusMessage(request)
 
     Make sure there's no stored message.
 
-      >>> len(status.showStatusMessages())
+      >>> len(status.show())
       0
 
     Add one message
       
-      >>> status.addStatusMessage(u'test', type=u'info')
+      >>> status.add(u'test', type=u'info')
 
     Now check the results
 
-      >>> messages = status.showStatusMessages()
+      >>> messages = status.show()
       >>> len(messages)
       1
 
@@ -73,14 +73,14 @@ def test_directives():
 
     Make sure messages are removed
 
-      >>> len(status.showStatusMessages())
+      >>> len(status.show())
       0
 
     Since we accessed the message prior to publishing the page, we must 
     ensure that the messages have been removed from the cookies
 
       >>> fakePublish(request)
-      >>> len(status.showStatusMessages())
+      >>> len(status.show())
       0
 
     Now we repeat the test, only this time we publish the page prior to
@@ -88,7 +88,7 @@ def test_directives():
 
     Add one message
       
-      >>> status.addStatusMessage(u'test', type=u'info')
+      >>> status.add(u'test', type=u'info')
 
     Publish the request
 
@@ -96,7 +96,7 @@ def test_directives():
 
     Now check the results
 
-      >>> messages = status.showStatusMessages()
+      >>> messages = status.show()
       >>> len(messages)
       1
 
@@ -108,17 +108,17 @@ def test_directives():
 
     Make sure messages are removed
 
-      >>> len(status.showStatusMessages())
+      >>> len(status.show())
       0
 
     Add two messages (without publishing)
 
-      >>> status.addStatusMessage(u'test', type=u'info')
-      >>> status.addStatusMessage(u'test1', u'warn')
+      >>> status.add(u'test', type=u'info')
+      >>> status.add(u'test1', u'warn')
       
     And check the results again
 
-      >>> messages = status.showStatusMessages()
+      >>> messages = status.show()
       >>> len(messages)
       2
 
@@ -132,19 +132,19 @@ def test_directives():
 
     Make sure messages are removed again
 
-      >>> len(status.showStatusMessages())
+      >>> len(status.show())
       0
 
     Add two messages (with publishing)
 
-      >>> status.addStatusMessage(u'test', type=u'info')
+      >>> status.add(u'test', type=u'info')
       >>> fakePublish(request)
-      >>> status.addStatusMessage(u'test1', u'warn')
+      >>> status.add(u'test1', u'warn')
       
     And check the results again
 
       >>> fakePublish(request)
-      >>> messages = status.showStatusMessages()
+      >>> messages = status.show()
       >>> len(messages)
       2
 
@@ -158,18 +158,18 @@ def test_directives():
 
     Make sure messages are removed again
 
-      >>> len(status.showStatusMessages())
+      >>> len(status.show())
       0
 
     Add two identical messages
 
-      >>> status.addStatusMessage(u'test', type=u'info')
-      >>> status.addStatusMessage(u'test', type=u'info')
+      >>> status.add(u'test', type=u'info')
+      >>> status.add(u'test', type=u'info')
 
     And check the results again
 
       >>> fakePublish(request)
-      >>> messages = status.showStatusMessages()
+      >>> messages = status.show()
       >>> len(messages)
       1
 
@@ -183,17 +183,17 @@ def test_directives():
 
     Make sure messages are removed again
 
-      >>> len(status.showStatusMessages())
+      >>> len(status.show())
       0
 
     Test incredibly long messages:
 
-      >>> status.addStatusMessage(u'm' * 0x400, type=u't' * 0x20)
+      >>> status.add(u'm' * 0x400, type=u't' * 0x20)
 
       And check the results again
 
       >>> fakePublish(request)
-      >>> messages = status.showStatusMessages()
+      >>> messages = status.show()
       >>> len(messages)
       1
 
@@ -208,8 +208,8 @@ def test_directives():
     Messages are stored as base64-ed cookie values, so we must make sure we
     create proper header values; all ascii characters, and no newlines:
     
-      >>> status.addStatusMessage(u'test' * 40, type=u'info')
-      >>> cookies = [c['value'] for c in request.RESPONSE.cookies.values()]
+      >>> status.add(u'test' * 40, type=u'info')
+      >>> cookies = [c['value'] for c in request.response.cookies.values()]
       >>> cookies = ''.join(cookies)
       >>> cookies == unicode(cookies).encode('ASCII')
       True
